--- a/styles/Footer.module.css
+++ b/styles/Footer.module.css
@@ -1,10 +1,29 @@
 .footer {
   width: 100%;
-  height: 100px;
+  height: 180px;
   border-top: 1px solid #eaeaea;
   display: flex;
   justify-content: center;
-  align-items: center;
-  background-color: black;
+  align-items: left;
+  background-color: var(--font-color);
   color: #fff;
+  flex-direction: column;
+  padding-left: 1.6rem;
+}
+.footerNav ul {
+  display: flex;
+  flex-direction: column;
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+.footerNav li {
+  padding: 0.3rem 0;
+  text-transform: uppercase;
+  font-size: 0.8em;
+}
+.copyright {
+  font-size: 0.8em;
+  opacity: 0.8;
+  margin-top: 0.6rem;
 }
