--- a/styles/Header.module.css
+++ b/styles/Header.module.css
@@ -1,8 +1,40 @@
 .header {
   width: 100%;
-  height: 100px;
+  height: 70px;
   border-bottom: 1px solid #eaeaea;
   display: flex;
   justify-content: center;
   align-items: center;
+  position: fixed;
+}
+
+.searchIcon {
+  width: 1.5em;
+  height: 1.5em;
+  color: var(--icon-color);
+  margin-right: 0.5rem;
+}
+.cartIcon {
+  width: 1.5em;
+  height: 1.5em;
+  color: var(--icon-color);
+  margin-right: 0.5rem;
+}
+.menuIcon {
+  width: 1.5em;
+  height: 1.5em;
+  color: var(--icon-color);
+  margin-right: 0.5rem;
+}
+.iconNav {
+  margin-top: 0.8rem;
+}
+.mainNav {
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+}
+.logo {
+  color: var(--font-color);
+  padding: 0 0.5rem;
 }
