--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,9 +1,16 @@
+:root {
+  --font-color: #111;
+  --icon-color: #111;
+}
+
 html,
 body {
   padding: 0;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  color: var(--font-color);
+  font-size: 16px;
 }
 
 a {
