--- a/styles/Header.module.css
+++ b/styles/Header.module.css
@@ -6,6 +6,8 @@
   justify-content: center;
   align-items: center;
   position: fixed;
+  background-color: var(--bg-color);
+  z-index: 10;
 }
 
 .searchIcon {
