--- a/styles/Footer.module.css
+++ b/styles/Footer.module.css
@@ -1,14 +1,18 @@
 .footer {
   width: 100%;
   height: 180px;
-  border-top: 1px solid #eaeaea;
   display: flex;
   justify-content: center;
-  align-items: left;
+  align-items: center;
   background-color: var(--font-color);
   color: #fff;
   flex-direction: column;
-  padding-left: 1.6rem;
+}
+.footerCont {
+  max-width: var(--max-cont-width);
+  margin: 0 auto;
+  padding: 0 1.6rem;
+  width: 100%;
 }
 .footerNav ul {
   display: flex;
