--- a/styles/Layout.module.css
+++ b/styles/Layout.module.css
@@ -1,18 +1,14 @@
 .container {
-  min-height: 100vh;
-  /* padding: 0 0.5rem; */
+  min-height: 90vh;
   display: flex;
   flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  height: 100vh;
+  justify-content: start;
 }
 .main {
-  padding: 5rem 0;
+  padding: 5.3rem 0 1rem 0;
   margin: 0;
   flex: 1;
   display: flex;
   flex-direction: column;
-  /* justify-content: center; */
   align-items: center;
 }
