--- a/styles/Layout.module.css
+++ b/styles/Layout.module.css
@@ -2,7 +2,7 @@
   min-height: 90vh;
   display: flex;
   flex-direction: column;
-  justify-content: start;
+  justify-content: flex-start;
 }
 .main {
   padding: 5.3rem 0 1rem 0;
