--- a/styles/ProductTile.module.css
+++ b/styles/ProductTile.module.css
@@ -1,12 +1,12 @@
-.card {
-}
-
 .details {
   padding: 0 0.5rem;
 }
 .name {
   font-size: 1rem;
   color: #111;
+  margin-bottom: 0;
+  margin-top: 0.6rem;
+  cursor: pointer;
 }
 
 .description {
@@ -22,4 +22,8 @@
 .price {
   font-size: 0.8rem;
   color: var(--font-color);
+  margin-top: 0.4rem;
+}
+.image {
+  cursor: pointer;
 }
